--- a/css/panels.css
+++ b/css/panels.css
@@ -3,17 +3,25 @@
     -khtml-user-select: none;
     -webkit-user-select: none;
     user-select: none;
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+
     margin: 0;
 }
+
 #placeholder {
     opacity:0.7;
     display:none;
     background: black;
 }
+
 .seethru {
     opacity: 0.7;
     z-index:1000;
 }
+
 .panel {
     min-width:200px;
     height:100%;
@@ -25,6 +33,7 @@
     -webkit-box-shadow: 0px 0px 8px 0px #000;
     box-shadow: 0px 0px 8px 0px #000;
 }
+
 .panel > h1 {
     font-family: Arial;
     font-size: 14pt;
@@ -32,6 +41,7 @@
     margin-bottom:5px;
     cursor:move;
 }
+
 .main {
     overflow:auto;
     width:100%;
