--- a/css/panels.css
+++ b/css/panels.css
@@ -23,15 +23,16 @@
 }
 
 .panel {
-    min-width:200px;
-    height:100%;
-    float:left;
-    padding:10px;
-    overflow:auto;
+    min-width: 200px;
+    height: auto;
+    overflow: visible;
+    float: left;
+    padding: 10px;
+    overflow: auto;
     background: white;
     border-radius: 5px;
-    -webkit-box-shadow: 0px 0px 8px 0px #000;
-    box-shadow: 0px 0px 8px 0px #000;
+    -webkit-box-shadow: 0 0 8px 0 #000;
+    box-shadow: 0 0 8px 0 #000;
 }
 
 .panel > h1 {
@@ -64,4 +65,10 @@
     /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#606c88', endColorstr='#3f4c6b', GradientType=0);
     /* IE6-9 */
+}
+
+.main:after {
+    content: '';
+    display: table;
+    clear: both;
 }
