--- a/css/panels.css
+++ b/css/panels.css
@@ -9,6 +9,7 @@
             box-sizing: border-box;
 
     margin: 0;
+    box-sizing:border-box;
 }
 
 #placeholder {
@@ -30,9 +31,11 @@
     padding: 10px;
     overflow: auto;
     background: white;
+/*
     border-radius: 5px;
     -webkit-box-shadow: 0 0 8px 0 #000;
     box-shadow: 0 0 8px 0 #000;
+*/
 }
 
 .panel > h1 {
